Version : 4.12.10 #XG1
- ParticleGray Tool.

Version : 4.12.9 #XG1
- Fixed importing animation frames from gif files.
- Reading of compressed Cliloc files is possible but saving will still result in old cliloc format.
- For Cliloc comparison tab you have now additional check boxes to decide if you want to read clilocs in new format.
- In order to read new Clilocs you need to enable option in Settings -> Options (it's disabled by default).
- Added PNG format when inserting or replacing graphics.
- Animation Export Funktion Bnp tiff and jpg and png.
- Export all Null function.
- Gumpart and cliloc write encryption support.
- Added ProgressBardialog2 add Cancel Button and funktion (items).
- Added ProgressBardialog2 add Cancel Button and funktion (LandTiles).
- Added ProgressBardialog2 add Cancel Button and funktion (Textures).
- Added ProgressBardialog2 add Cancel Button and funktion (Gumps).
- Added ProgressBardialog add Cancel Button and funktion (Items).

Version : 4.12.8 #XG1
- Bugs fixed and revised.
- Nuget Update System Drawing Common 6.0.
- Gumps: Added listing methodform.
- Add Animation XML Editor.
- Changelog revised search revised.

Version : 4.12.7 #XG1
- Added methods to load, stop, and play random MP3 files from a directory, 
  including logic to prevent song replay when manually stopped and enabling randomized song selection upon song end.
- Added Com : medien player lib.
- Update Nuget Paket.
- RoundButton class added for toolbox.

Version : 4.12.6 #XG1
- Added backup directory copy feature (Path Settings).
- Added BtnLogDir Open Log Dir (Options).
- Added function reads the colors of an image, displays them in a RichTextBox, and allows visualization in a PictureBox through highlighting. (Items).
- Added map cordinate to clipboard (map)
- Added Image animation management with support for image import from clipboard and load and customizable animation speed.